Small fixes from lint pass